[package]
edition = "2021"
name    = "blockchain"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex        =             "0.4"
libp2p     = { version = "0.39", features = ["tcp-tokio"]                                          }
once_cell  =             "1.5"
serde      = { version = "1.0" , features = ["derive"]                                             }
serde_json =             "1.0"
sha2                   = "0.9.8"
tokio      = { version = "1.0" , features = ["io-std","io-util","macros","rt-multi-thread","sync"] }

